--- a/views/data.ejs
+++ b/views/data.ejs
@@ -5,31 +5,31 @@
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">First Name:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[1].name %>" onclick="myFunction(0)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata[0].contactname %>" onclick="myFunction(0)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Phone:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[1].phone %>" onclick="myFunction(1)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata[0].phone %>" onclick="myFunction(1)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Pin Code:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[1].pincode %>" onclick="myFunction(2)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata[0].zip %>" onclick="myFunction(2)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Address:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[1].address %>" onclick="myFunction(3)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata[0].address %>" onclick="myFunction(3)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">City:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[1].city %>" onclick="myFunction(4)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata[0].state %>" onclick="myFunction(4)"  readonly>
                 </div>
                 </div>
                
@@ -42,7 +42,10 @@
                 </div>
                 <hr>
                 <div class="row" id="fetchdata">
-                <button type="button" class="btn btn-primary btn-lg btn-block">Fetch New Data</button>
+                <form action="/data" method="POST">
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Fetch New Data</button>
+                </form>
                 </div>
+                
             </div> 
 <%- include("partials/footer") %>
