--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,31 +5,31 @@
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">First Name:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].contactname %>" onclick="myFunction(0)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata.contactname %>" onclick="myFunction(0)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Phone:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].phone %>" onclick="myFunction(1)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata.phone %>" onclick="myFunction(1)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Pin Code:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].zip %>" onclick="myFunction(2)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata.zip %>" onclick="myFunction(2)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Address:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].address %>" onclick="myFunction(3)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata.address %>" onclick="myFunction(3)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">City:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].state %>" onclick="myFunction(4)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata.state %>" onclick="myFunction(4)"  readonly>
                 </div>
                 </div>
                
@@ -41,9 +41,10 @@
                 </div>
                 </div>
                 <hr>
+                
                 <div class="row" id="fetchdata">
-                <form action="/data?_method=DELETE" method="POST">
-                <button type="submit" class="btn btn-primary btn-lg btn-block">Fetch New Data</button>
+                <form action="/data/<%= usadata._id %>?_method=PUT" method="POST">
+                <button class="btn btn-primary btn-lg btn-block">Fetch New Data</button>
                 </form>
                 </div>
                 
