--- a/views/show.ejs
+++ b/views/show.ejs
@@ -41,9 +41,9 @@
                 </div>
                 </div>
                 <hr>
-                
+                </form>
                 <div class="row" id="fetchdata">
-                <form action="/data/<%= usadata._id %>?_method=PUT" method="POST">
+                <form action="/data/<%= usadata._id %>?_method=DELETE" method="POST">
                 <button class="btn btn-primary btn-lg btn-block">Fetch New Data</button>
                 </form>
                 </div>
