--- a/views/data.ejs
+++ b/views/data.ejs
@@ -1,51 +1,18 @@
 <%- include("partials/header") %>
 <div class="container">
-    <h5 style="text-align: center">Data For Uttar Pradesh</h5>
-    <form>
-                <div class="form-group row form1">
-                <label class="col-sm-3 col-form-label">First Name:</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].contactname %>" onclick="myFunction(0)"  readonly>
-                </div>
-                </div>
-                <div class="form-group row form1">
-                <label class="col-sm-3 col-form-label">Phone:</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].phone %>" onclick="myFunction(1)"  readonly>
-                </div>
-                </div>
-                <div class="form-group row form1">
-                <label class="col-sm-3 col-form-label">Pin Code:</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].zip %>" onclick="myFunction(2)"  readonly>
-                </div>
-                </div>
-                <div class="form-group row form1">
-                <label class="col-sm-3 col-form-label">Address:</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].address %>" onclick="myFunction(3)"  readonly>
-                </div>
-                </div>
-                <div class="form-group row form1">
-                <label class="col-sm-3 col-form-label">City:</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata[0].state %>" onclick="myFunction(4)"  readonly>
-                </div>
-                </div>
-               
-                <hr>
-                <div class="form-group row form1">
-                <label class="col-sm-3 col-form-label">Email:</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="krates198@gmail.com" onclick="myFunction(5)"  readonly>
-                </div>
-                </div>
-                <hr>
-                <div class="row" id="fetchdata">
-                <form action="/data?_method=DELETE" method="POST">
-                <button type="submit" class="btn btn-primary btn-lg btn-block">Fetch New Data</button>
-                </form>
-                </div>
-                
-            </div> 
+
+    <div class="toprow">
+        <h2>USE Florida Data</h2>
+        <a href="/data/<%= usadata[0]._id %>" class="btn btn-primary">USE Data</a>
+    </div>
+</div>  
 <%- include("partials/footer") %>
+
+
+   
+        <!-- <% usadata.forEach(function(usa){ %>
+            
+                   <p>
+                       <a href="/data/<%= usa._id %>" class="btn btn-primary">USE Data</a>
+                   </p>
+        <% }); %> -->
