--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") %>
 <div class="container">
-    <h5 style="text-align: center">Data For Uttar Pradesh</h5>
+    <h5 style="text-align: center">Displaying Data</h5>
     <form>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">First Name:</label>
@@ -57,4 +57,11 @@
                 </div>
                 
             </div> 
-<%- include("partials/footer") %>
+        <script src="/js/copy.js"></script>
+        </div> 
+        
+        <div class="datafooter">
+            <p class="h6 text-center">Developed By Techlab</p>
+            </div>
+            </body>
+        </html>
