--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,47 +5,53 @@
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">First Name:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata.contactname %>" onclick="myFunction(0)"  readonly>
+                    <input class="form-control name" type="text" value="<%= usadata.contactname %>" onclick="myFunction(0)"  readonly>
+                    <input class="form-control name" type="text" value="<%= usadata.contactname %>" onclick="myFunction(1)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Phone:</label>
                 <div class="col-sm-9">
-                    <input class="form-control phone" type="text" value="<%= usadata.phone.substring(0, 3) %>" onclick="myFunction(1)"  readonly>
-                    <input class="form-control phone" type="text" value="<%= usadata.phone.substring(3, 6) %>" onclick="myFunction(2)"  readonly>
-                    <input class="form-control phone" type="text" value="<%= usadata.phone.substring(6, 10) %>" onclick="myFunction(3)"  readonly>
+                    <input class="form-control phone" type="text" value="<%= usadata.phone.substring(0, 3) %>" onclick="myFunction(2)"  readonly>
+                    <input class="form-control phone" type="text" value="<%= usadata.phone.substring(3, 6) %>" onclick="myFunction(3)"  readonly>
+                    <input class="form-control phone" type="text" value="<%= usadata.phone.substring(6, 10) %>" onclick="myFunction(4)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Pin Code:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata.zip %>" onclick="myFunction(4)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata.zip %>" onclick="myFunction(5)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Address:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata.address %>" onclick="myFunction(5)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata.address %>" onclick="myFunction(6)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
-                <label class="col-sm-3 col-form-label">City:</label>
+                <label class="col-sm-3 col-form-label">State:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= usadata.state %>" onclick="myFunction(6)"  readonly>
+                    <input class="form-control" type="text" value="<%= usadata.state %>" onclick="myFunction(7)"  readonly>
                 </div>
                 </div>
-               
+                <div class="form-group row form1">
+                    <label class="col-sm-3 col-form-label">City:</label>
+                    <div class="col-sm-9">
+                        <input class="form-control" type="text" value="<%= usadata.city %>" onclick="myFunction(8)"  readonly>
+                    </div>
+                    </div>
                 <hr>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Email:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= emails.email %>" onclick="myFunction(7)"  readonly>
+                    <input class="form-control" type="text" value="<%= emails.email %>" onclick="myFunction(9)"  readonly>
                 </div>
                 </div>
                 <div class="form-group row form1">
                     <label class="col-sm-3 col-form-label">Password:</label>
                     <div class="col-sm-9">
-                        <input class="form-control" type="text" value="<%= emails.password %>" onclick="myFunction(8)"  readonly>
+                        <input class="form-control" type="text" value="<%= emails.password %>" onclick="myFunction(10)"  readonly>
                     </div>
                     </div>
                 <hr>
