--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,10 +5,15 @@
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">First Name:</label>
                 <div class="col-sm-9">
-                    <input class="form-control name" type="text" value="<%= usadata.contactname %>" onclick="myFunction(0)"  readonly>
-                    <input class="form-control name" type="text" value="<%= usadata.contactname %>" onclick="myFunction(1)"  readonly>
+                    <input class="form-control name" type="text" value="<%= usadata.firstname %>" onclick="myFunction(0)"  readonly>
                 </div>
                 </div>
+                <div class="form-group row form1">
+                    <label class="col-sm-3 col-form-label">Last Name:</label>
+                    <div class="col-sm-9">
+                        <input class="form-control name" type="text" value="<%= usadata.lastname %>" onclick="myFunction(1)"  readonly>
+                    </div>
+                    </div>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Phone:</label>
                 <div class="col-sm-9">
