--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -9,9 +9,9 @@
                     <th>Country Name</th>
                 </tr>
                 <tr>
-                    <th><%= xa %></th>
-                    <th><%= xar %></th>
-                    <th><%= xac %></th>
+                    <td><%= xa %></td>
+                    <td><%= xar %></td>
+                    <td><%= xac %></td>
                 </tr>
             </table>
           <a href="/data">
