added search in admin panel

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,3 +64,16 @@
     max-width: 170px;
     display: inline;
 }
+
+select {
+    margin: 50px;
+    width: 150px;
+    padding: 5px 35px 5px 5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    height: 34px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url(http://www.stackoverflow.com/favicon.ico) 96% / 15% no-repeat #eee;
+  }
