--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,27 +1,98 @@
 <%- include("partials/header") %>
-        <div>
-            <table class="table">
-                <tr>
-                    <th>Date</th>
-                    <th>Username</th>
-                    <th>IP</th>
-                    <th>Time</th>
-                </tr>
-                
-            <% for(var i=0;i<ipad.length;i++){ %>
-                <tr>
-                    <td><%= ipad[i].date %></td>
-                    <td><%= ipad[i].username %></td>
-                    <td><%= ipad[i].ipaddress %></td>
-                    <td><%= ipad[i].time %></td>
-                </tr>
-            <% }; %>
-                
-            </table>
+    
+        <div class="row">
+            <div class="col-sm">
+            <form action="/admin" method="GET" class="form-inline">
+            <select name="users">
+                <option value="selectuser">Select User</option>
+                <option value="all">All</option>
+                <option value="tushar">Tushar</option>
+                <option value="shaan">Shaan</option>
+                <option value="vipin">Vipin</option>
+                <option value="rishi">Rishi</option>
+                <option value="deepak">Deepak</option>
+                <option value="krates">krates</option>
+              </select>
+           
+              <select name="day">
+                <option>- Day -</option>
+                <option value="01">1</option>
+                <option value="02">2</option>
+                <option value="03">3</option>
+                <option value="04">4</option>
+                <option value="05">5</option>
+                <option value="06">6</option>
+                <option value="07">7</option>
+                <option value="08">8</option>
+                <option value="09">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
+                </select><select name="month">
+                <option>- Month -</option>
+                <option value="01">January</option>
+                <option value="02">Febuary</option>
+                <option value="03">March</option>
+                <option value="04">April</option>
+                <option value="05">May</option>
+                <option value="06">June</option>
+                <option value="07">July</option>
+                <option value="08">August</option>
+                <option value="09">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
+                </select><select name="year">
+                <option>- Year -</option>
+                <option value="2020">2020</option>
+                </select>
+                <button class="btn btn-primary" value="search" onclick="swag">Submit</button>
+            </form>
         </div>
-        <div class="datafooter">
-            <p class="h6 text-center">Developed By Techlab</p>
-            </div>
-        </div>
-    </body>
-</html>
+    </div>
+            
+            <%  if(noMatch === "has"){ %>
+                <table class="table">
+                    <tr>
+                        <th>Count</th>
+                        <th>Date</th>
+                        <th>Username</th>
+                        <th>IP</th>
+                        <th>Time</th>
+                    </tr>
+            <% ipad.forEach(function(campground,index){ %>
+                <tr>
+                    <td><%= index+1 %></td>
+                    <td><%= campground.date %></td>
+                    <td><%= campground.username %></td>
+                    <td><%= campground.ipaddress %></td>
+                    <td><%= campground.time %></td>
+                </tr>
+            <% }); %>
+                </table>
+        <% } %>
+            <% if(noMatch === "had") { %>
+                <h3>No Results</h3>
+                <% } %>
+    
+ <%- include("partials/footer") %>
+    
