trying to fix footer

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -95,10 +95,4 @@
                 
             </div> 
         <script src="/js/copy.js"></script>
-        </div> 
-        
-        <div class="datafooter">
-            <p class="h6 text-center">Developed By Techlab</p>
-            </div>
-            </body>
-        </html>
+        <%- include("partials/footer") %>
