--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,6 @@
-
-</div> 
-
-<div id="footer">
+<footer class="footer">
     <p class="h6 text-center">Developed By Techlab</p>
-    </div>
+</footer>
+</div> 
     </body>
 </html>
