--- a/views/show.ejs
+++ b/views/show.ejs
@@ -89,7 +89,7 @@
                 </form>
                 <div class="row" id="fetchdata">
                 <form action="/data/<%= usadata._id %>?_method=DELETE" method="POST">
-                <button class="btn btn-primary btn-lg btn-block">Fetch New Data</button>    
+                <button class="btn btn-primary btn-lg btn-block fetch">Fetch New Data</button>    
                 </form>
                 </div>
                 
