fixed views folder and error handling

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,17 +1,17 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
     
         <div class="row">
             <div class="col-sm">
             <form action="/admin" method="GET" class="form-inline">
             <select name="users">
                 <option value="selectuser">Select User</option>
-                <option value="all">All</option>
+                <option value="deepak">Deepak</option>
                 <option value="tushar">Tushar</option>
                 <option value="shaan">Shaan</option>
                 <option value="vipin">Vipin</option>
                 <option value="rishi">Rishi</option>
                 <option value="deepak">Deepak</option>
-                <option value="krates">krates</option>
+                <option value="krishna">Krishna</option>
               </select>
            
               <select name="day">
@@ -94,5 +94,5 @@
                 <h3>No Results</h3>
                 <% } %>
     
- <%- include("partials/footer") %>
+ <%- include("../partials/footer") %>
     
