--- a/views/data/show.ejs
+++ b/views/data/show.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 <div class="container">
     
     <form>
@@ -95,4 +95,4 @@
                 
             </div> 
         <script src="/js/copy.js"></script>
-        <%- include("partials/footer") %>
+        <%- include("../partials/footer") %>
