--- a/views/pages/pages.ejs
+++ b/views/pages/pages.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 
 <div class="row">
     <div class="col-sm-4">
@@ -26,4 +26,4 @@
         </div>
     </div>
 </div>
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
