first four tabs admin

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,7 +92,7 @@ footer {
 }
 
 select {
-    margin: 50px;
+    margin: 20px;
     width: 150px;
     padding: 5px 35px 5px 5px;
     font-size: 16px;
@@ -101,6 +101,39 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background: url(http://www.stackoverflow.com/favicon.ico) 96% / 15% no-repeat #eee;
+    }
+  
+  .row{
+      margin-top: 30px;
   }
   
+  .sidebar{
+    height: auto; /* Full-height: remove this if you want "auto" height */
+    width: 13%; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: auto; /* Stay at the top */
+    left: 0;
+    background-color: #f8f9fa; /* Black */
+    
+    
+  }
+
+  .sidebar a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 15px;
+    color: #395b66;
+    display: block;
+    border-bottom: 1px dashed rebeccapurple;
+  }
+
+  .sidebar a:hover {
+    background-color: #4a4a4a;
+    color: white;
+  }
+
+  #adminreg{
+    padding-top: 10vh;
+    text-align: center;
+  }
