--- a/views/partials/adminnav.ejs
+++ b/views/partials/adminnav.ejs
@@ -10,6 +10,7 @@
             <a href="/admin/performance">User Performance</a>
             <a href="/admin/accounts">Accounts</a>
             <a href="/admin/hitlist">Hitlist</a>
+            <a href="/admin/uploademail">Upload Emails</a>
 
         </div>
         </div>
