--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -2,9 +2,52 @@
 <%- include("../partials/adminnav") %>
 
     <div class="col-sm-11">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper imperdiet libero ut suscipit. Nullam ac leo lectus. Vestibulum sed luctus nulla. Ut semper tellus diam, eu volutpat nulla rutrum lacinia. Vestibulum feugiat porttitor turpis, ac porttitor odio vestibulum nec. Sed sed orci sollicitudin tellus laoreet ultricies. Cras fermentum iaculis elit eleifend ultrices. Nullam risus augue, commodo in congue quis, porttitor pulvinar odio. Donec lectus eros, imperdiet tincidunt nisi tincidunt, varius elementum mi. Etiam auctor augue nec diam commodo, eu dapibus lacus laoreet. Sed mollis est in magna consectetur, vitae maximus ante tristique. Sed vel nisl elementum, rutrum augue id, vestibulum dolor.
+        
+        <input type="hidden" id="ds1" value="<%= dat[0] %>">
+        <input type="hidden" id="ds2" value="<%= dat[1] %>">
+        <input type="hidden" id="ds3" value="<%= dat[2] %>">
+        <input type="hidden" id="ds4" value="<%= dat[3] %>">
+        <input type="hidden" id="ds5" value="<%= dat[4] %>">
+        <input type="hidden" id="dc1" value="<%= dac[0] %>">
+        <input type="hidden" id="dc2" value="<%= dac[1] %>">
+        <input type="hidden" id="dc3" value="<%= dac[2] %>">
+        <input type="hidden" id="dc4" value="<%= dac[3] %>">
+        <input type="hidden" id="dc5" value="<%= dac[4] %>">
 
-            Nullam consectetur mollis odio, quis dignissim nibh tempus sed. Integer gravida sem et ante consectetur, ut posuere risus malesuada. Nunc volutpat vitae turpis ut vestibulum. Aenean cursus congue sodales. Nullam quis posuere lorem. Pellentesque odio tortor, accumsan et sollicitudin nec, suscipit vitae dolor. Aenean in ante fermentum, porttitor velit ac, feugiat magna. Aliquam erat volutpat. Integer in enim vel felis congue porttitor ac in ex. Nunc sollicitudin enim non lectus aliquet ornare. Nunc cursus lectus id nibh eleifend sollicitudin at id ante. Sed iaculis varius felis, et suscipit neque aliquet vel.</p>
+        <canvas id="myChart" width="800" height="400"></canvas>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+        <script type="text/javascript" >
+        var ctx = document.getElementById('myChart');
+        var inputVal1 = document.getElementById("ds1").value;
+        var inputVal2 = document.getElementById("ds2").value;
+        var inputVal3 = document.getElementById("ds3").value;
+        var inputVal4 = document.getElementById("ds4").value;
+        var inputVal5 = document.getElementById("ds5").value;
+        var inputVal6 = document.getElementById("dc1").value;
+        var inputVal7 = document.getElementById("dc2").value;
+        var inputVal8 = document.getElementById("dc3").value;
+        var inputVal9 = document.getElementById("dc4").value;
+        var inputVal0 = document.getElementById("dc5").value;
+        var xab = [inputVal5,inputVal4,inputVal3,inputVal2,inputVal1];
+        var xac = [inputVal0,inputVal9,inputVal8,inputVal7,inputVal6];
+        
+        var myChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: xab,
+                datasets: [{
+                    label: '# Of Sets Completed',
+                    data: xac,
+                    backgroundColor: 'rgba(102,255,102,0.2)',
+                    borderColor: 'rgba(51,51,0,0.2)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                responsive: false
+            }
+        });
+    </script>
     </div>
 </div>
 
