--- a/views/admin/userwork.ejs
+++ b/views/admin/userwork.ejs
@@ -12,6 +12,7 @@
                 <option value="rishi">Rishi</option>
                 <option value="deepak">Deepak</option>
                 <option value="krishna">Krishna</option>
+                <option value="prakash">Prakash</option>
               </select>
            
               <select name="day">
