--- a/views/admin/hitlist.ejs
+++ b/views/admin/hitlist.ejs
@@ -2,14 +2,26 @@
 <%- include("../partials/adminnav") %>
 
     <div class="col-sm-11">
-        <form class="form-group" action="/admin/hitlist" enctype="multipart/form-data" method="POST"> 
-            <input type="file" name="myFile" />
-            <input type="submit" value="Upload a file"/>
+        <p class="lead">
+
+            To find hitlist please make sure your file looks like the image below also it should be in CSV format
+            
+        </p>
+        <img class="img-thumbnail imagax" src="/images/forhitlist.png">
+        <form class="form-group" action="/admin/hitlist" enctype="multipart/form-data" method="POST">
+            
+            <div class="custom-file">
+                
+                <input type="file" name="myFile" class="custom-file-input" id="customFile">
+                <label class="custom-file-label" for="customFile">Choose file</label>
+                <br><br>
+                <button class="btn btn-primary" style="display: inline;">Upload File</button>
+              </div> 
          </form>
         </div>
 </div>
-
-    
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="/js/filename.js"></script>    
     
  <%- include("../partials/footer") %>
     
