--- a/views/partials/adminnav.ejs
+++ b/views/partials/adminnav.ejs
@@ -2,6 +2,7 @@
     <div class="col-sm-1">
         <div class="sidebar">
             <a href="/admin/todaywork">Today's Work</a>
+            <a href="/admin/yesterdaywork">Yesterday Work</a>
             <a href="/admin/register">Register User</a>
             <a href="/admin/dataleft">Data Left</a>
             <a href="/admin/userwork">Indvidual Work</a>
