added upload data

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -147,3 +147,13 @@ select {
 .imagax{
     margin-bottom: 20px;
 }
+
+.noresults{
+    margin: auto;
+    width: 30%;
+}
+
+.success{
+    margin:auto;
+    width: 70%;
+}
