--- a/views/admin/uploaddata2.ejs
+++ b/views/admin/uploaddata2.ejs
@@ -2,7 +2,7 @@
 <%- include("../partials/adminnav") %>
 
     <div class="col-sm-11">
-        <h2 class="success">Upload Email Successful</h2>
+        <h2 class="success">Upload Data Successful</h2>
         </div>
 </div>
 
