--- a/views/partials/adminnav.ejs
+++ b/views/partials/adminnav.ejs
@@ -7,11 +7,12 @@
             <a href="/admin/dataleft">Data Left</a>
             <a href="/admin/userwork">Indvidual Work</a>
             <a href="/admin/attendance">Attendance</a>
-            <a href="/admin/salary">Salary</a>
+            <!-- <a href="/admin/salary">Salary</a>
             <a href="/admin/performance">User Performance</a>
-            <a href="/admin/accounts">Accounts</a>
+            <a href="/admin/accounts">Accounts</a> -->
             <a href="/admin/hitlist">Hitlist</a>
             <a href="/admin/uploademail">Upload Emails</a>
+            <a href="/admin/uploaddata">Upload Data</a>
 
         </div>
         </div>
