--- a/views/admin/dataleft.ejs
+++ b/views/admin/dataleft.ejs
@@ -3,50 +3,102 @@
 
     <div class="col-sm-11">
         <table class="table">
+            <th>
+                Emails
+            </th>
+            <th>
+                <%= EMAIL %>
+            </th>
+        </table>
+        <table class="table">
+            <th>
+                States
+            </th>
+            <th>
+                Count
+            </th>
             <tr>
-                <th><% if(!noMatch) { %>
-                    Emails
-                </th>
-                <th><%= emalen %>
-                    <% } %></th>
+                <td>Arizona</td>
+                <td><%= stes[0] %></td>
+            </tr>
+            <tr>
+                <td>California</td>
+                <td><%= stes[1] %></td>
+            </tr>
+            <tr>
+                <td>Colorado</td>
+                <td><%= stes[2] %></td>
+            </tr>
+            <tr>
+                <td>Connecticut</td>
+                <td><%= stes[3] %></td>
+            </tr>
+            <tr>
+                <td>Florida</td>
+                <td><%= stes[4] %></td>
+            </tr>
+            <tr>
+                <td>Georgia</td>
+                <td><%= stes[5] %></td>
+            </tr>
+            <tr>
+                <td>Idaho</td>
+                <td><%= stes[6] %></td>
+            </tr>
+            <tr>
+                <td>Illinois</td>
+                <td><%= stes[7] %></td>
+            </tr>
+            <tr>
+                <td>Indiana</td>
+                <td><%= stes[8] %></td>
+            </tr>
+            <tr>
+                <td>Iowa</td>
+                <td><%= stes[9] %></td>
+            </tr>
+            <tr>
+                <td>Maryland</td>
+                <td><%= stes[10] %></td>
+            </tr>
+            <tr>
+                <td>Massachusetts</td>
+                <td><%= stes[11] %></td>
+            </tr>
+            <tr>
+                <td>Michigan</td>
+                <td><%= stes[12] %></td>
+            </tr>
+            <tr>
+                <td>Nebraska</td>
+                <td><%= stes[13] %></td>
+            </tr>
+            <tr>
+                <td>Nevada</td>
+                <td><%= stes[14] %></td>
+            </tr>
+            <tr>
+                <td>New Jersey</td>
+                <td><%= stes[15] %></td>
+            </tr>
+            <tr>
+                <td>Texas</td>
+                <td><%= stes[16] %></td>
+            </tr>
+            <tr>
+                <td>Utah</td>
+                <td><%= stes[17] %></td>
+            </tr>
+            <tr>
+                <td>Virginia</td>
+                <td><%= stes[18] %></td>
+            </tr>
+            <tr>
+                <td>Washington</td>
+                <td><%= stes[19] %></td>
             </tr>
         </table>
-        <form action="/admin/dataleft" method="GET" class="form-inline">
-            <select name="state">
-                <option value="selectstate">Select State</option>
-                <option value="AZ">Arizona</option>
-                <option value="CA">California</option>
-                <option value="CO">Colorado</option>
-                <option value="CT">Connecticut</option>
-                <option value="FL">Florida</option>
-                <option value="GA">Georgia</option>
-                <option value="ID">Idaho</option>
-                <option value="IL">Illinois</option>
-                <option value="IN">Indiana</option>
-                <option value="IA">Iowa</option>
-                <option value="MD">Maryland</option>
-                <option value="MA">Massachusetts</option>
-                <option value="MI">Michigan</option>
-                <option value="NE">Nebraska</option>
-                <option value="NV">Nevada</option>
-                <option value="NJ">New Jersey</option>
-                <option value="TX">Texas</option>
-                <option value="UT">Utah</option>
-                <option value="VA">Virginia</option>
-                <option value="WA">Washington</option>
-              </select>
-              <button class="btn btn-primary" value="search">Submit</button>
-            </form>
-            <%  if(noMatch === "has"){ %>
-            <table class="table">
-                <tr>
-                    <th><%= state %></th>
-                    <th><%= stalen %></th>
-                </tr>
-            </table><% } %>
-                <% if(noMatch === "had") { %>
-                    <h3>No Results</h3>
-                    <% } %>
+        
                     
     </div>
 </div>
