--- a/views/admin/attendance.ejs
+++ b/views/admin/attendance.ejs
@@ -1,10 +1,33 @@
 <%- include("../partials/header") %>
 <%- include("../partials/adminnav") %>
+    <% var xax;%>
+    <% var arr =[];%>   
+    <div class="col-sm">
+        <table class="table table-dark">
+            <th>
+                Username
+            </th>
+            <%  for(var i=1;i<=daysm;i++){ %>    
+                <%  if(i<10){ xax = "0"+i.toString(); } else{ %>
+                        <%     xax = i.toString(); } %>
+                        <%   xax = xax + "/5/2020"; %>
+                        <th><%= xax.substring(0, 2) %></th>
+                <% arr.push(xax); %>
+                <% } %>
+        <% worker.forEach(function(work){ %>
+            <tr>
+                <td>
+            <%= work.username %>
+                </td>
+               
+            </tr>
+            
+            <%}) %>
 
-    <div class="col-sm-11">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper imperdiet libero ut suscipit. Nullam ac leo lectus. Vestibulum sed luctus nulla. Ut semper tellus diam, eu volutpat nulla rutrum lacinia. Vestibulum feugiat porttitor turpis, ac porttitor odio vestibulum nec. Sed sed orci sollicitudin tellus laoreet ultricies. Cras fermentum iaculis elit eleifend ultrices. Nullam risus augue, commodo in congue quis, porttitor pulvinar odio. Donec lectus eros, imperdiet tincidunt nisi tincidunt, varius elementum mi. Etiam auctor augue nec diam commodo, eu dapibus lacus laoreet. Sed mollis est in magna consectetur, vitae maximus ante tristique. Sed vel nisl elementum, rutrum augue id, vestibulum dolor.
-
-            Nullam consectetur mollis odio, quis dignissim nibh tempus sed. Integer gravida sem et ante consectetur, ut posuere risus malesuada. Nunc volutpat vitae turpis ut vestibulum. Aenean cursus congue sodales. Nullam quis posuere lorem. Pellentesque odio tortor, accumsan et sollicitudin nec, suscipit vitae dolor. Aenean in ante fermentum, porttitor velit ac, feugiat magna. Aliquam erat volutpat. Integer in enim vel felis congue porttitor ac in ex. Nunc sollicitudin enim non lectus aliquet ornare. Nunc cursus lectus id nibh eleifend sollicitudin at id ante. Sed iaculis varius felis, et suscipit neque aliquet vel.</p>
+            
+            
+            
+    </table>
     </div>
 </div>
 
