--- a/views/partials/adminnav.ejs
+++ b/views/partials/adminnav.ejs
@@ -7,6 +7,7 @@
             <a href="/admin/dataleft">Data Left</a>
             <a href="/admin/userwork">Indvidual Work</a>
             <a href="/admin/attendance">Attendance</a>
+            <a href="/admin/lastmonth">L/M Attendance</a>
             <!-- <a href="/admin/salary">Salary</a>
             <a href="/admin/performance">User Performance</a>
             <a href="/admin/accounts">Accounts</a> -->
