--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
             <% } %>
           </ul>
           <span class="navbar-text">
-            <a class="nav-link" href="users/<%= currentUser._id %>">Signed In As <%= currentUser.username %></a>
+            <a class="nav-link" href="/users/<%= currentUser._id %>">Signed In As <%= currentUser.username %></a>
           </span>
           <span class="navbar-text">
             <a class="nav-link" href="/logout">Sign Out</a>
