--- a/views/data/index.ejs
+++ b/views/data/index.ejs
@@ -2,6 +2,18 @@
 
 <div class="container">
     <div class="toprow">
+        <table class="table">
+            <tr>
+                <th>Region Code</th>
+                <th>Region Name</th>
+                <th>Country Name</th>
+            </tr>
+            <tr>
+                <td><%= xa %></td>
+                <td><%= xar %></td>
+                <td><%= xac %></td>
+            </tr>
+        </table>
             <% if(alldata !== null) { %>
                 <h2>Click Below For Data</h2>
                 <a href="/data/<%= alldata._id %>" class="btn btn-primary">USE Data</a>
