--- a/views/partials/adminnav.ejs
+++ b/views/partials/adminnav.ejs
@@ -8,7 +8,9 @@
             <a href="/admin/userwork">Indvidual Work</a>
             <a href="/admin/attendance">Attendance</a>
             <a href="/admin/lastmonth">L/M Attendance</a>
-            <!-- <a href="/admin/salary">Salary</a>
+            <a href="/admin/salary">Salary</a>
+            <a href="/admin/offers">Offers</a>
+            <!-- 
             <a href="/admin/performance">User Performance</a>
             <a href="/admin/accounts">Accounts</a> -->
             <a href="/admin/hitlist">Hitlist</a>
