--- a/views/partials/adminnav.ejs
+++ b/views/partials/adminnav.ejs
@@ -9,6 +9,7 @@
             <a href="/admin/attendance">Attendance</a>
             <a href="/admin/lastmonth">L/M Attendance</a>
             <a href="/admin/salary">Salary</a>
+            <a href="/admin/gensalary">Generate Salary</a>
             <a href="/admin/offers">Offers</a>
             <!-- 
             <a href="/admin/performance">User Performance</a>
