--- a/views/pages/pages.ejs
+++ b/views/pages/pages.ejs
@@ -7,10 +7,13 @@
         <div class="card text-white bg-secondary mb-3 topclass">
             <div class="card-header">OFFER <%= i+1 %></div>
             <div class="card-body">
-            <a href="<%= offurl[i].offerurl %>" target="_blank"><button class="btn btn-success wid">Link</button></a>
+            <a href="<%= offurl[i].offerurl %>" class="open" target="_blank"><button class="btn btn-success wid">Link</button></a>
             </div>
         </div>
     </div>
     <% } %>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="/js/openlinks.js"></script>  
+
 <%- include("../partials/footer") %>
