--- a/views/users/userprofile.ejs
+++ b/views/users/userprofile.ejs
@@ -39,6 +39,17 @@
                 <input name="paddress" class="form-control " type="text" placeholder="Permanent Address" required>
             </div>
             </div>
+            <div class="form-group row form1">
+                <label class="col-sm-3 col-form-label">Shift:</label>
+                <div class="col-sm-9">
+                    <select class="userprofile" name="shift">
+                        
+                        <option value="day">Day</option>
+                        <option value="night">Night</option>
+                        <option value="evening">Evening</option>
+                      </select>
+                </div>
+                </div>
             <hr>
             <div><h5 class="userheading">For Salary</h5></div>
             <hr>
@@ -134,6 +145,12 @@
                 <input class="form-control " type="text" value="<%= currentUser.paddress %>" readonly>
             </div>
             </div>
+            <div class="form-group row form1">
+                <label class="col-sm-3 col-form-label">Shift:</label>
+                <div class="col-sm-9">
+                    <input class="form-control " type="text" value="<%= currentUser.shift %>" readonly>
+                </div>
+                </div>
             <div class="form-group row form1">
             <label class="col-sm-3 col-form-label">GooglePay:</label>
             <div class="col-sm-9">
